--- a/scripts/1_development.Rmd
+++ b/scripts/1_development.Rmd
@@ -42,7 +42,7 @@ show_col(plot_cols[c(1, 3, 2)])
 ```
 
 ```{r load-data}
-# Land use class codes:
+# Land use class codes: (for He's site, Shaanxi and Belarus)
 #       1. Non-vegetated area (e.g. water, urban, barren land)
 #       2. Woody vegetation
 #       3. Cropland 
@@ -127,6 +127,112 @@ hist(dt_merge[, 3])
 dt_merge_counts <- dt_merge[, .(count = .N), by = belarus_1988]
 barplot(data = dt_merge_counts, count ~ belarus_1988)
 ```
+
+```{r load-all-sites}
+# Primary sites
+# 1. Shaanxi - He
+# 2. Belarus (Smolensk) - He
+# 3. Chongqing - Yanhua (not great -fields are small, mountainous, and lots of clouds) - look at the data to see. 
+# 4. Goias - Ben
+# 5. Mato Grasso - Amintas
+# 6. Nebraska - Seth
+# 7. Wisconsin - David
+# 
+# ok
+# 8. Volgograd - Natalia
+# 9. Orenburg - Natalia
+# 10. Bosnia & Herzegovina (medium)
+# 11. Iraq (medium good, low accuracy over years, but good single accuracy)
+# 
+# exclude 
+# 12. Nepal - Johanna
+# 13. Sardinia - Kasia
+# 14. Uganda - Niwaeli
+
+# CAREFUL!!!!! Land Cover codes are different for each file:
+# Land use class codes: (for He's site, Shaanxi and Belarus)
+#       1. Non-vegetated area (e.g. water, urban, barren land)
+#       2. Woody vegetation
+#       3. Cropland 
+#       4. Herbaceous land (e.g. grassland)
+
+# Shaanxi (China):  1 others;     2 forest,     3 cropland;     4 grassland
+# Belarus - Russia: 1 others;     2 forest,     3 cropland;     4 grassland
+# Brazil Goias:     1 others;     2 forest,     3 cropland;     4 grassland
+# Brazil Amazon:    1 others;     2 forest;     3 cropland;     4 grassland
+# Bosnia:           1 others;     2 forest;     3 cropland;     4 grassland
+# Chongqing:        1 others;     2 forest;     3 cropland;     4 grassland
+
+# Iraq:             1 others;     2 cropland;   3 forest;       4 grassland
+# Nebraska:         1 cropland;   2 forest;     3 others;       4 grassland
+# Russia Orenburg:  1 others;     2 cropland;   3 grassland;    4 forest
+# Russia Volgograd: 1 others;     2 cropland;   3 grassland;    4 forest
+# Wisconsin:        1 cropland;   2 grassland;  3 forest;       4 others
+
+site_list <- c("shaanxi", "belarus", 
+               "chongqing", "goias", "mato_grosso", 
+               "nebraska", "wisconsin", "volgograd",
+               "orenburg", "bosnia_herzegovina", "iraq") # list of all sites
+
+site_label_list <- c("_s", "_b", 
+                     "_c", "_g", "_mg", 
+                     "_n", "_w", "_v", 
+                     "_o", "_bh", "_i")
+
+# ---------------------------------------------------
+# load final tifs 
+# ---------------------------------------------------
+
+# year of first abandonment maps
+yoa_files <- list.files(paste0(p_dat, "Abandonment/year_of_abandonment/"))
+map_files <- list.files(paste0(p_dat, "Abandonment/final_maps/"))
+
+r
+r <- vector(mode = "list", length = length(map_files)# + 2
+            )
+r[[1]] <- brick(paste0(p_dat, "Abandonment/shaanxi.tif"))
+r[[2]] <- brick(paste0(p_dat_derived, "input_rasters/belarus.tif")) # merged version
+
+
+r <- lapply(seq_along(map_files), function(i) {
+  brick(paste0(p_dat, "Abandonment/Final_maps/", map_files[i]))
+  }
+  )
+
+names(r) <- map_files #site_list
+
+
+plot(c(ncell(b), ncell(s), sapply(seq_along(r), FUN = function(i) ncell(r[[i]]))))
+
+test <- brick(paste0("/Users/christophercrawford/Google Drive/_Projects/data/Abandonment/Final_maps/", map_files[2]))
+test
+cellStats(test, "mean")
+cellStats(test, )
+freq(test)
+
+
+b
+plot(b[[1]])
+
+plot(test)
+ncell(test)
+# GEE
+
+# just belarus files, but not necessary
+# b_files <- list.files(paste0(p_dat, "Abandonment/belarus_tiles/")) %>%
+#   grep("belarus", ., value = TRUE)
+
+b1 <- brick(paste0(p_dat, "Abandonment/belarus_tiles/", b_files[1]))
+s <- brick(paste0(p_dat_derived, "input_rasters/shaanxi.tif"))
+s
+
+plot(s[[1]], main = "Shaanxi 1987", breaks = c(0, plot_cols$breaks), col = plot_cols$color)
+
+b_tiles <- lapply(1:6, function(i) {
+    brick(paste0(p_dat, "Abandonment/belarus_tiles/", b_files[i]))})
+names(b_tiles) <- b_files
+```
+
 
 ```{r load-GEE}
 p_eefull <- "/Users/christophercrawford/Google Drive/_Projects/data/Abandonment/eefull/"
@@ -274,7 +380,13 @@ bt <- brick(paste0(p_dat_derived, "belarus_subset.tif"))
 
 
 ```{r simple-plots}
-show_col(plot_cols) # (topleft = 1, topright = 2, bottomleft = 3, bottomright = 4)
+
+plot(b$y2017, main = "Belarus 2017", breaks = c(0, plot_cols$breaks), col = plot_cols$color)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+show_col(plot_cols$color) # (topleft = 1, topright = 2, bottomleft = 3, bottomright = 4)
 # gray,         1. Non-veg
 # dark green,   2. Woody veg
 # gold,         3. Crop
